[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-schema-validator"
version = "0.1.0"
description = "Validate LLM tool schemas for Anthropic, OpenAI, and Gemini providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "tools", "schema", "validation", "anthropic", "openai", "gemini"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
where = ["src"]
